# django-firebird-legacy

./: README.rst  requirements.txt  setup.cfg  setup.py
firebird/: __init__.py  base.py  expressions.py  introspection.py  operations.py  schema.py
tests/test_main/datatypes/: tests.py
tests/test_main/model_fields/: models.py
tests/test_main/test_main/: settings.py  urls.py
