[metadata]
name = django-firebird-legacy
version = attr: firebird.__version__
description = Firebird backend for Django web framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Maximiliano Robaina
author_email = maxirobaina@gmail.com
url = https://github.com/piklema/django-firebird-legacy
download_url = https://github.com/piklema/django-firebird-legacy
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.7
zip_safe = false
install_requires =
    fdb==2.0.2

[wheel]
universal = 1
